# libtinyclist

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: list.c  list.h
test/: main.c
